Add concept graph creation with documents from external document server (#196)
* Add functionality to call concept-graphs-api with document server config file

Add check whether the document server is reachable

* Add status value to PipelineResponse

To check more easily if something went wrong (either data server not accessible or some such)

* Add functionality to utilize document server given in the adapter

For connecting as data_server in ConceptGraphApiDelegateImpl when neither data nor a data_server_config file is provided

* Add pipeline GET method for default document server

As given in the adapter for text-document-query

* Add explicit PipelineFailEntity for when the concept-graphs-api returns one of the known status codes

* Upgrade dependencies to stable versions

* Add new config parameters to test document adapter

* Declare and fill new fields when no adapter was found

* Rename properties and provide default values

* Add ContextInitializer for TopBackendApplication

This was done to provide the same initializer to test

* Fix elasticsearch version conflicts

* Replace URL with URI since 'bolt' was not recognized

* Update ports of elasticsearch test container

* Update README.md

Add link to top-document-query for adapter explanation as well as a little insight into what the concept-graph-service is used for